impostati primi due elementi nav left

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <!-- NAV LEFT -->
         <div class="flex nav-left">
-            <div class="box">
+            <div class="flex flex-center box">
                 <i class="fas fa-chevron-left"></i>
             </div>
 
-            <div class="box">
+            <div class="flex flex-center box">
                 <i class="fas fa-chevron-right"></i>
             </div>
 
