--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <i class="fas fa-chevron-right"></i>
             </div>
 
-            <div class="box">
+            <div class="flex search-box">
                 <i class="fas fa-search"></i>
-                <input type="text" class="search" placeholder="Cerca">
+                <input type="text" class="input-search" placeholder="Cerca">
             </div>
         </div>
         <!-- FINE NAV LEFT -->
